# SFML_Chess

./: CMakeLists.txt  README.md  buildAndRunCommand.txt
res/: boardString.txt
src/: Animation.cpp  Animation.h  Bishop.cpp  Bishop.h  Board.cpp  Board.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  SFML_Chess.code-workspace  dev_log.txt  main.cpp
